product setup working
